--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                                 <input
                                                     type="text"
                                                     placeholder="내용"
-                                                    className="w-1/3 p-2 text-sm bg-white border border-transparent rounded-lg focus:border-blue-500 outline-none transition-colors shadow-sm"
+                                                    className="flex-1 p-2 text-sm bg-white border border-transparent rounded-lg focus:border-blue-500 outline-none transition-colors shadow-sm"
                                                     value={expenseInputs[budget.id]?.desc || ''}
                                                     onChange={(e) => handleExpenseInputChange(budget.id, 'desc', e.target.value)}
                                                 />
