--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         body { font-family: 'Noto Sans KR', sans-serif; }
         .animate-fade-in { animation: fadeIn 0.2s ease-out; }
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+        /* 숫자 입력 화살표 제거 */
+        input[type=number]::-webkit-inner-spin-button, 
+        input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
     </style>
 </head>
 <body class="bg-white">
@@ -47,6 +50,95 @@
         const ArrowDownIcon = ({ className }) => (
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="m6 9 6 6 6-6"/></svg>
         );
+        const ExchangeIcon = ({ className }) => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M8 3 4 7l4 4"/><path d="M4 7h16"/><path d="m16 21 4-4-4-4"/><path d="M20 17H4"/></svg>
+        );
+
+        // 환율 계산기 컴포넌트
+        const CurrencyConverter = () => {
+            const [krw, setKrw] = useState('');
+            const [jpy, setJpy] = useState('');
+            const [rate, setRate] = useState(null); // 100엔당 원화 가격
+            const [loading, setLoading] = useState(true);
+
+            useEffect(() => {
+                // 완전 무료 오픈소스 API (Frankfurter) 사용으로 변경
+                // 1 JPY에 대한 KRW 비율을 가져옴
+                fetch('https://api.frankfurter.app/latest?from=JPY&to=KRW')
+                    .then(res => res.json())
+                    .then(data => {
+                        // data.rates.KRW는 1엔당 원화 가격
+                        setRate(data.rates.KRW);
+                        setLoading(false);
+                    })
+                    .catch(err => {
+                        console.error("환율 정보 로드 실패", err);
+                        setRate(9.0); // 실패 시 대략적인 기본값 설정
+                        setLoading(false);
+                    });
+            }, []);
+
+            const handleKrwChange = (e) => {
+                const val = e.target.value;
+                setKrw(val);
+                if (val && rate) {
+                    // 원화 -> 엔화: 원화 / 환율
+                    setJpy((parseFloat(val) / rate).toFixed(0));
+                } else {
+                    setJpy('');
+                }
+            };
+
+            const handleJpyChange = (e) => {
+                const val = e.target.value;
+                setJpy(val);
+                if (val && rate) {
+                    // 엔화 -> 원화: 엔화 * 환율
+                    setKrw((parseFloat(val) * rate).toFixed(0));
+                } else {
+                    setKrw('');
+                }
+            };
+
+            if (loading) return <div className="text-center text-xs text-gray-400 py-2">환율 로딩 중...</div>;
+
+            return (
+                <div className="bg-blue-50 rounded-2xl border border-blue-100 p-3 mb-6 shadow-sm">
+                    <div className="flex items-center justify-between gap-2">
+                        <div className="flex-1 relative">
+                            <input 
+                                type="number" 
+                                value={krw}
+                                onChange={handleKrwChange}
+                                placeholder="KRW"
+                                className="w-full text-right pr-6 pl-2 py-1 bg-white rounded-lg border border-blue-100 focus:outline-none focus:border-blue-400 text-gray-800 font-bold"
+                            />
+                            <span className="absolute right-2 top-1.5 text-xs text-gray-400 pointer-events-none">원</span>
+                        </div>
+                        
+                        <div className="text-blue-400">
+                            <ExchangeIcon className="w-4 h-4" />
+                        </div>
+
+                        <div className="flex-1 relative">
+                            <input 
+                                type="number" 
+                                value={jpy}
+                                onChange={handleJpyChange}
+                                placeholder="JPY"
+                                className="w-full text-right pr-6 pl-2 py-1 bg-white rounded-lg border border-blue-100 focus:outline-none focus:border-blue-400 text-gray-800 font-bold"
+                            />
+                            <span className="absolute right-2 top-1.5 text-xs text-gray-400 pointer-events-none">엔</span>
+                        </div>
+                    </div>
+                    <div className="text-center mt-1">
+                        <p className="text-[10px] text-gray-400">
+                            현재 환율: 100엔 = {(rate * 100).toFixed(2)}원
+                        </p>
+                    </div>
+                </div>
+            );
+        };
 
         function App() {
             // 예산 데이터 상태 관리
@@ -98,7 +190,6 @@
 
             const deleteBudget = (id) => {
                 if (window.confirm('이 예산 항목을 통째로 삭제할까요?')) {
-                    // 오류 수정: setTimeout을 사용하여 이벤트 버블링 후 상태 업데이트
                     setTimeout(() => {
                         setBudgets(prev => prev.filter(b => b.id !== id));
                     }, 0);
@@ -163,7 +254,6 @@
             const deleteLog = (budgetId, logId) => {
                 if(!window.confirm('이 지출 내역을 삭제하시겠습니까?')) return;
 
-                // 오류 수정: setTimeout을 사용하여 안전하게 DOM 제거
                 setTimeout(() => {
                     setBudgets(prev => prev.map(budget => {
                         if(budget.id !== budgetId) return budget;
@@ -234,6 +324,9 @@
                             <h1 className="text-2xl font-black text-gray-800 tracking-tight">결정적 소비</h1>
                         </header>
 
+                        {/* 환율 계산기 (신규 추가) */}
+                        <CurrencyConverter />
+
                         {/* 예산 목록 */}
                         <div className="space-y-4">
                             {budgets.length === 0 ? (
@@ -248,7 +341,6 @@
                                         <div key={budget.id} className="bg-blue-50 rounded-2xl shadow-sm border border-blue-100 p-5 transition-all hover:shadow-md">
                                             {/* 상단: 이름 및 컨트롤(순서변경, 삭제) */}
                                             <div className="flex justify-between items-center mb-4 border-b border-blue-100 pb-2">
-                                                {/* span으로 감싸서 텍스트 노드 오류 방지 */}
                                                 <h3 className="text-lg font-bold text-gray-800">
                                                     <span>{budget.name}</span>
                                                 </h3>
@@ -289,7 +381,6 @@
                                                 <div className="text-left">
                                                     <p className="text-xs text-gray-500 mb-1">총 예산</p>
                                                     <p className="text-2xl font-bold text-blue-600">
-                                                        {/* span으로 감싸서 텍스트 노드 오류 방지 */}
                                                         <span>{formatMoney(budget.total)}</span>
                                                     </p>
                                                 </div>
@@ -297,7 +388,6 @@
                                                 <div className="text-right">
                                                     <p className="text-xs text-gray-500 mb-1">남은 돈</p>
                                                     <p className="text-2xl font-bold text-red-600">
-                                                        {/* span으로 감싸서 텍스트 노드 오류 방지 */}
                                                         <span>{formatMoney(remaining)}</span>
                                                     </p>
                                                 </div>
@@ -328,14 +418,13 @@
                                                 </button>
                                             </div>
 
-                                            {/* 지출 목록 (업데이트됨) */}
+                                            {/* 지출 목록 */}
                                             {budget.logs.length > 0 && (
                                                 <div className="bg-white/60 rounded-lg p-3 border border-blue-100/50">
                                                     <ul className="space-y-2">
                                                         {budget.logs.map((log) => (
                                                             <li key={log.id} className="flex justify-between items-center text-xs text-gray-600 group">
                                                                 <div className="flex-1 truncate mr-2">
-                                                                    {/* span으로 감싸서 텍스트 노드 오류 방지 */}
                                                                     <span className="font-medium text-gray-700">
                                                                         {log.desc}
                                                                     </span>
@@ -345,7 +434,6 @@
                                                                         -{formatMoney(log.amount)}
                                                                     </span>
                                                                     
-                                                                    {/* 수정/삭제 버튼 그룹 */}
                                                                     <div className="flex items-center gap-1 opacity-100 sm:opacity-0 group-hover:opacity-100 transition-opacity">
                                                                         <button 
                                                                             onClick={() => openEditLogModal(budget.id, log)}
@@ -439,7 +527,7 @@
                         </div>
                     )}
 
-                    {/* 지출 수정 모달 (신규 추가) */}
+                    {/* 지출 수정 모달 */}
                     {isEditModalOpen && editingLog && (
                         <div className="fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4 backdrop-blur-sm">
                             <div className="bg-white rounded-2xl p-6 w-full max-w-sm shadow-xl border border-gray-100">
@@ -489,4 +577,3 @@
     </script>
 </body>
 </html>
-
