--- a/index.html
+++ b/index.html
@@ -642,7 +642,17 @@
                                                                 <span className="text-[10px] text-gray-400 font-medium tabular-nums shrink-0 leading-tight w-[60px] text-left">
                                                                     {log.date && log.date.includes('/') ? log.date : (log.date || '').substring(5)}
                                                                 </span>
-                                                                <span className="font-medium text-gray-700 truncate ml-1">
+                                                                <span 
+                                                                    className="font-medium text-gray-700 ml-1 text-left"
+                                                                    style={{ 
+                                                                        display: '-webkit-box', 
+                                                                        WebkitLineClamp: 2, 
+                                                                        WebkitBoxOrient: 'vertical', 
+                                                                        overflow: 'hidden', 
+                                                                        whiteSpace: 'normal',
+                                                                        wordBreak: 'break-all'
+                                                                    }}
+                                                                >
                                                                     {log.desc}
                                                                 </span>
                                                             </div>
